Add Installed Flag

--- a/defense-canvas.html
+++ b/defense-canvas.html
@@ -275,6 +275,9 @@ Example:
       // This is the point where you should make modifications to the DOM (when
       // necessary), or kick off any processes the element wants to perform.
 
+      if(this.installed){
+        this.set("loading", false);
+      }
     },
 
     attached: function() {
