--- a/defense-selector.html
+++ b/defense-selector.html
@@ -679,7 +679,7 @@ Example:
 
       imageUrl: {
         type: String,
-        value: "localhost:9092"
+        value: ""
       },
 
       models: {
