--- a/defense-selector.html
+++ b/defense-selector.html
@@ -242,6 +242,10 @@ Example:
     }
 
     :host ::content #selector .option .thumbnail.disabled{
+      opacity: .5;
+    }
+
+    :host ::content #selector .option .thumbnail.selected{
       opacity: 0;
     }
 
