--- a/demo/index.html
+++ b/demo/index.html
@@ -713,7 +713,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <defense-selector id="config" image-url="../demo"></defense-selector>
     https://1storage.googleapis.com/defenseselector -->
 
-    <defense-selector id="config" installed image-url="https://storage.googleapis.com/defenseselector/"></defense-selector>
+    <defense-selector id="config" image-url="https://storage.googleapis.com/defenseselector/"></defense-selector>
 
 
     <!--
