Update with Caching

--- a/defense-canvas.html
+++ b/defense-canvas.html
@@ -262,8 +262,7 @@ Example:
 
       side:{
         type: String,
-        value: "A0",
-        observer: 'onSideChange'
+        value: "A0"
       },
 
       color: {
