--- a/team-stats.html
+++ b/team-stats.html
@@ -31,7 +31,7 @@ Example:
     :host {
       display: block;
       font-family: 'Roboto';
-      overflow: hidden;
+      /*overflow: hidden;*/
       position: relative;
     }
 
@@ -57,7 +57,7 @@ Example:
 
   <template>
     <iron-ajax auto
-               url="http://10.241.251.53:8888/bobanalytics?type=advanced"
+               url="http://10.241.251.58:8888/bobanalytics?type=advanced"
                handle-as="json" on-response="gotAdvancedStats"></iron-ajax>
     <div class="table">
       <div class="row">
