--- a/demo/index.html
+++ b/demo/index.html
@@ -685,8 +685,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       var selectionModels = [
         {'id':'s1', 'type':'selector', 'label': 'Select the Defenses for Your Castle', 'options': cloneArray(baseOptions)},
-        {'id':'s2', 'type':'selector', 'label': 'Enter the Your Opponents\' Defenses', 'options': cloneArray(baseOptions)},
-        {'id':'s3', 'type':'modal', 'label': 'Enter the Your Audience Selected Defense', 'options': cloneArray(baseOptions)},
+        {'id':'s2', 'type':'selector', 'label': 'Enter the Your Opponents\' Defenses', 'options': cloneArray(baseOptions)}
       ];
 
       var rules = [{'modelSku': 'p1', static: true}, {'modelSku': 'p3', restricted: true},{'optionSku':'a','maxValueCount':'1'},{'optionSku':'b','maxValueCount':'1'},{'optionSku':'c','maxValueCount':'1'},{'optionSku':'d','maxValueCount':'1'},{'optionSku':'b','disabled':true}];
